--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A repository used to demonstrate API creation using NodeJS",
 	"scripts": {
 		"start": "nodemon src/server.ts",
-		"test": "jest --watch"
+		"test": "jest --watch  --detectOpenHandles"
 	},
 	"repository": {
 		"type": "git",
